--- a/FE/frontend/src/components/toilet/ToiletGrid.module.css
+++ b/FE/frontend/src/components/toilet/ToiletGrid.module.css
@@ -1,9 +1,10 @@
-.gridContainer {
+.gridContainer {    
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    align-items: center;
+    
     width: 100%;
     height: 100%;
-    
 }
 
