--- a/FE/frontend/src/components/toilet/ToiletStatus.module.css
+++ b/FE/frontend/src/components/toilet/ToiletStatus.module.css
@@ -1,41 +1,104 @@
 /* ToiletStatus.css */
-.statusContainer {
+.statusContainer { 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+ 
   width: 85%;
 }
 
 .content {
-  width: 100%;
-  height: 60%;
-  
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  
+  width: 100%;
+  height: 60%;
 }
 
-.contentItem {
+.itemBox {
+  display: flex;
+  flex-direction: column;
+
+  width: 45%;
+  height: 100%;
+}
+
+.textItem {
+ text-align: center;
+ margin: 0px 0px 10px;
+
+ font-size: 25px;
+ font-weight: bolder;
+}
+
+.gridItem {
   border: solid black 1px;
   box-sizing: border-box;
   border-radius: 25px;
-  width: 45%;
-  height: 90%;
+  width: 100%;
+  flex: 1;
+
 }
+
 
 .content h2 {
   color: #333;
 }
 
 .header {
-  background-color: blanchedalmond;
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  
+  background-color: rgb(255, 255, 255);
   width: 100%;
-  height: 10%;
+  height: 15%;
+}
+
+.title {
+  margin: 0px 0px 30px;
+  margin-left: 30px;
+  font-size: 50px;
+  font-weight: bolder;
+}
+
+.buildingName {
+  margin: 0px 40px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.floor {
+  margin: 0px 0px auto;
+  margin-right: 30px;
+  font-size: 50px;
+  font-weight: bold;
 }
 
 .footer {
-  background-color: blanchedalmond;
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+
+  box-sizing: border-box;
+  padding: 20px;
+  background-color: white;
+
   width: 100%;
-  height: 30%;
+  height: 25%;
+}
+
+.status {
+  font-weight: bolder;
+}
+
+.congestion {
+  font-weight: bolder;
+
+
 }
