--- a/FE/frontend/src/components/adminToilet/StateChange.module.css
+++ b/FE/frontend/src/components/adminToilet/StateChange.module.css
@@ -1,15 +1,117 @@
-.report_list_wrapper {
+/* state 전체 container */
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+
+  width: 100%;
+  height: 100%;
+}
+
+/* state 왼쪽 페이지 container */
+.logoContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  box-sizing: border-box;
+  padding: 0% 0% 10%;
+
+  width: 50%;
+  height: 100%;
+}
+
+/* state 로고 */
+.logo {
+  object-fit: contain;
+  width: 100%;
+  height: 35%;
+}
+
+/* state 페이지 안내 텍스트 */
+.text {
+  width: 100%;
+  text-align: center;
+  font-size: 25px;
+  font-weight: bolder;
+  color: #B35310;
+}
+
+.stateContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  box-sizing: border-box;
+  padding: 0% 5% 5%;
+  width: 50%;
+  height: 100%;
+}
+
+.stateType {
+  color: #B35310;
+  font-size: 20px;
+  font-weight: bolder;
+  margin: 5% 0%;
+}
+
+/* 상태변경 type */
+.state_list_wrapper {
   display: grid;
   grid-template-columns: repeat(3, auto);
   gap: 2%;
+  margin-bottom: 7%;
 }
 
-.report_content{
+/* 상세위치 */
+.state_content {
+  display: flex;
+  justify-content: start;
+  justify-items: center;
+  align-items: center;
+
   width: 100%;
+  height: 75px;
   box-sizing: border-box;
-  resize: vertical;
+
   border-radius: 10px;
-  background-color: #ececec;
+  border: solid 3px #B35310;
+  background-color: #f1e9de;
 
   padding: 10px;
+}
+
+/* 상세위치 이미지 */
+.contentImg {
+  margin-left: 10px;
+  margin-right: 15px;
+}
+
+/* 상세위치 텍스트 */
+.contentText {
+  font-size: 20px;
+  font-weight: bolder;
+  color: #646363;
+  cursor: pointer;
+}
+
+/* state 버튼 container */
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  gap: 10%;
+  margin-top: 7%;
+}
+
+/* 제출 및 취소 버튼 */
+.button {
+  padding: 3% 5%;
+  background-color: chocolate;
+  border-radius: 25px;
+
+  font-weight: bolder;
+  color: white;
+
+  cursor: pointer;
 }
