--- a/FE/frontend/src/App.css
+++ b/FE/frontend/src/App.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 .app-container{
     width: 1024px;
     height: 600px;
+    border-radius: 25px;
+    border:solid 5px #B35310;
+    background-color: #f4e6d4;
+    font-family: 'Varela Round', sans-serif;
+    margin: 5% auto ;
 }
