--- a/FE/frontend/src/components/adminToilet/CongestionItem.module.css
+++ b/FE/frontend/src/components/adminToilet/CongestionItem.module.css
@@ -1,4 +1,6 @@
 .statusImg {
-    width: 100%;
-    height: 100%;
+    object-fit:cover;
+    width: 16px;
+    height: 16px;
+    margin: 0px 1px;
 }
