--- a/FE/frontend/src/components/adminToilet/ToiletGrid.module.css
+++ b/FE/frontend/src/components/adminToilet/ToiletGrid.module.css
@@ -1,10 +1,22 @@
-.gridContainer {    
+.gridContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    
+
     width: 100%;
     height: 100%;
+    border-radius: 25px;
+    background-color: #f1ebe3;
+
 }
 
+.iconContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon {
+    width: 50%;
+}
