--- a/FE/frontend/src/components/adminToilet/ToiletStatus.module.css
+++ b/FE/frontend/src/components/adminToilet/ToiletStatus.module.css
@@ -1,41 +1,76 @@
 /* ToiletStatus.css */
 .statusContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
   width: 85%;
 }
 
 .content {
-  width: 100%;
-  height: 60%;
-  
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+
+  width: 100%;
+  height: 60%;
 }
 
-.contentItem {
-  border: solid black 1px;
+.itemBox {
+  display: flex;
+  flex-direction: column;
+
+  width: 45%;
+  height: 100%;
+}
+
+.textItem {
+  text-align: center;
+  margin: 10px 0px;
+
+  font-size: 25px;
+  font-weight: bolder;
+
+  color: #B35310;
+}
+
+.gridItem {
+  border: solid #B35310 4px;
   box-sizing: border-box;
   border-radius: 25px;
-  width: 45%;
-  height: 90%;
-}
+  width: 100%;
+  flex: 1;
 
-.content h2 {
-  color: #333;
 }
 
 .header {
-  background-color: blanchedalmond;
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+
   width: 100%;
-  height: 10%;
+  height: 15%;
 }
 
-.footer {
-  background-color: blanchedalmond;
-  text-align: center;
-  width: 100%;
-  height: 30%;
+.title {
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.buildingName {
+  margin: 0px 40px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.floor {
+  margin: auto 0px;
+  margin-right: 30px;
+  font-size: 50px;
+  font-weight: bolder;
+  color: #B35310;
 }
