--- a/FE/frontend/src/components/toilet/FloorBar.module.css
+++ b/FE/frontend/src/components/toilet/FloorBar.module.css
@@ -1,7 +1,6 @@
 /* FllorBar.css */
 .floorBar {
   width: 15%;
-  background-color: white;
   padding: 10px;
   order: 2;
   max-height: 100%;
@@ -15,38 +14,60 @@
 }
 
 
-.floorItem {
-  box-sizing: border-box;
-
+.floorItem_on {
   display: flex;
   flex-direction: column;
-  align-content:  stretch;
+  align-content: stretch;
 
 
-  margin: auto;
   width: 70%;
   height: 10%;
-  margin: 10px;
-  border-radius: 15px;
-  font-weight: 900;
+  margin: 10px 0px 10px 20px;
+  border-radius: 10px;
+  font-weight: bolder;
 
   cursor: pointer;
-  color: black;
+  color: white;
 
   text-align: center;
-  
 
-  background-color: rgb(210, 210, 210);
+
+  background-color: #B35310 ;
+}
+
+.floorItem_off {
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
+
+
+  width: 70%;
+  height: 10%;
+  margin: 10px 0px 10px 20px;
+  border-radius: 10px;
+  font-weight: bolder;
+
+  cursor: pointer;
+  color: white;
+
+  text-align: center;
+
+
+  background-color: #dcb79c ;
 }
 
 
 .floorCongestion {
   display: flex;
   flex-direction: row;
+
+  box-sizing: border-box;
+  padding-left: 3px;
+  padding-top: 3px;
   height: 25%;
 }
 
-.floorCongestion div{
+.floorCongestion div {
   height: 100%;
   width: 20%;
   margin: 0% 3%
