--- a/FE/frontend/src/components/toilet/ToiletStatus.module.css
+++ b/FE/frontend/src/components/toilet/ToiletStatus.module.css
@@ -1,10 +1,10 @@
 /* ToiletStatus.css */
-.statusContainer { 
+.statusContainer {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
- 
+
   width: 85%;
 }
 
@@ -13,9 +13,9 @@
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-around;
-  
+
   width: 100%;
-  height: 60%;
+  height: 65%;
 }
 
 .itemBox {
@@ -27,15 +27,17 @@
 }
 
 .textItem {
- text-align: center;
- margin: 0px 0px 10px;
+  text-align: center;
+  margin: 10px 0px;
 
- font-size: 25px;
- font-weight: bolder;
+  font-size: 25px;
+  font-weight: bolder;
+
+  color: #B35310;
 }
 
 .gridItem {
-  border: solid black 1px;
+  border: solid #B35310 4px;
   box-sizing: border-box;
   border-radius: 25px;
   width: 100%;
@@ -43,27 +45,20 @@
 
 }
 
-
-.content h2 {
-  color: #333;
-}
-
 .header {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  
-  background-color: rgb(255, 255, 255);
+
   width: 100%;
   height: 15%;
 }
 
 .title {
-  margin: 0px 0px 30px;
-  margin-left: 30px;
-  font-size: 50px;
-  font-weight: bolder;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
 }
 
 .buildingName {
@@ -73,10 +68,11 @@
 }
 
 .floor {
-  margin: 0px 0px auto;
+  margin: auto 0px;
   margin-right: 30px;
   font-size: 50px;
-  font-weight: bold;
+  font-weight: bolder;
+  color: #B35310;
 }
 
 .footer {
@@ -86,11 +82,9 @@
   justify-content: space-around;
 
   box-sizing: border-box;
-  padding: 20px;
-  background-color: white;
 
   width: 100%;
-  height: 25%;
+  height: 20%;
 }
 
 .status {
@@ -99,6 +93,4 @@
 
 .congestion {
   font-weight: bolder;
-
-
 }
