--- a/FE/frontend/src/pages/AdminToilet/ToiletRegist.module.css
+++ b/FE/frontend/src/pages/AdminToilet/ToiletRegist.module.css
@@ -1,27 +1,80 @@
+/* 전체 container */
 .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+}
+
+/* Home 왼쪽 페이지 container */
+.logoContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    box-sizing: border-box;
+    padding: 0% 0% 4%;
+
+    width: 50%;
+    height: 100%;
+}
+
+/* regist 로고 */
+.logo {
+    object-fit: contain;
+    cursor: pointer;
+    width: 100%;
+    height: 35%;
+}
+
+/* regist 페이지 안내 텍스트 */
+.text {
+    width: 100%;
+    text-align: center;
+    font-size: 25px;
+    font-weight: bolder;
+    color: #B35310;
+}
+
+.registContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    box-sizing: border-box;
+    padding: 7% ;
+    width: 50%;
+    height: 100%;
 }
 
+/* row, col, gender, floor 입력칸 container */
 .selectOption {
+
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+
+    width: 100%;
+    height: 10%;
+    gap: 2%;
 }
 
+/* input, select 테두리 */
 .sizeOption {
-    width: 90px;
-    height: 50px;
-    margin-top: 25%;
+    width: 100%;
+    height: 100%;
+
     margin-right: 10px;
-    border: 3px solid chocolate;
+    border: 3px solid #B35310 ;
     border-radius: 25px;
+
     overflow: hidden;
 }
 
-
+/* input select 내부 */
 .sizeOptionInput, 
 .sizeOptionSelect {
 
@@ -30,14 +83,19 @@
     border: none;
     outline: none;  
     border-radius: 25px;
+    background-color: #ececec;
 }
 
 .registGrid {
-    width: 500px;
-    height: 500px;
-    border: 3px solid chocolate;
+    width: 100%;
+    height: 80%;
+
+    box-sizing: border-box;
+    padding: 3%;
+    border: 3px solid #B35310 ;
+    background-color: #ececec;
     border-radius: 25px;
-    margin-top: 30px;
+    margin-top: 20px;
 
     display: flex;
     flex-wrap: wrap;
@@ -46,11 +104,12 @@
 }
 
 .submitRestRoom {
-    width: 500px;
-    height: 60px;
-    border: solid 3px chocolate;
+    width: 90%;
+    height: 7%;
+    
     border-radius: 25px;
-    margin-top: 30px;
+    margin-top: 20px;
+    padding: 2%;
 
     color: white;
     font-size: large;
@@ -60,18 +119,18 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-
+    
     cursor: pointer;
-
-    background-color: chocolate;
+    background-color: #B35310 ;
 }
 
 .submitBlock {
-    width: 500px;
-    height: 60px;
-    border: solid 3px #EBC680;
+    width: 90%;
+    height: 7%;
+    
     border-radius: 25px;
-    margin-top: 30px;
+    margin-top: 20px;
+    padding: 2%;
 
     color: white;
     font-size: large;
@@ -83,5 +142,5 @@
     align-items: center;
 
     pointer-events: none;
-    background-color: #EBC680;
+    background-color: #dcb79c;
 }
