--- a/FE/frontend/src/pages/AdminToilet/ToiletStatistics.module.css
+++ b/FE/frontend/src/pages/AdminToilet/ToiletStatistics.module.css
@@ -1,7 +1,51 @@
+/* staticstic 전체 container */
 .container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
+
+    width: 100%;
+    height: 100%;
+}
+
+/* staticstic 왼쪽 페이지 container */
+.logoContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    box-sizing: border-box;
+    padding: 0% 0% 4%;
+
+    width: 50%;
+    height: 100%;
+}
+
+/* staticstic 로고 */
+.logo {
+    object-fit: contain;
+    cursor: pointer;
+    width: 100%;
+    height: 35%;
+}
+
+/* staticstic 페이지 안내 텍스트 */
+.text {
+    width: 100%;
+    text-align: center;
+    font-size: 25px;
+    font-weight: bolder;
+    color: #B35310;
+}
+
+.stContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    width: 50%;
+    height: 100%;
 }
 
 .selectOption {
@@ -12,26 +56,23 @@
 }
 
 .sizeOption {
-    width: 90px;
+    width: 50%;
     height: 50px;
-    margin-top: 25%;
-    margin-right: 10px;
+
     border: 3px solid chocolate;
     border-radius: 25px;
-    overflow: hidden;
-    text-align-last: center;
 }
 
-.sizeOptionSubmit, 
+.sizeOptionSubmit,
 .sizeOptionSelect {
     width: 100%;
-    height: 100%; 
+    height: 100%;
     border: none;
-    outline: none;  
+    outline: none;
     border-radius: 25px;
 }
 
-.sizeOptionSubmit{
+.sizeOptionSubmit {
     display: flex;
     align-items: center;
     justify-content: space-around;
