--- a/FE/frontend/src/pages/Home/Home.module.css
+++ b/FE/frontend/src/pages/Home/Home.module.css
@@ -1,3 +1,25 @@
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+
+    gap: 20%;
+    width: 100%;
+    height: 100%;
+}
+
 .building {
+    width: 95%;
+
     cursor: pointer;
+    text-align: center;
+
+    font-size: 25px;
+    font-weight: bolder;
+    
+
+    color: #B35310;
+
 }
