로컬환경 최종

--- a/FE/frontend/src/layouts/ToiletInfo.module.css
+++ b/FE/frontend/src/layouts/ToiletInfo.module.css
@@ -33,15 +33,57 @@
 
 /* 화장실칸 정보 */
 .statusImg1 {
-    background-color: aqua;
+    background-color: #90ee90;
+    border-radius: 5px;
+    width: 30px;
+    height: 30px;
+}
+
+.statusImg2 {
+    background-color: #FF6E6E;
+    border-radius: 5px;
+    width: 30px;
+    height: 30px;
+}
+
+.statusImg3 {
+    background-color: #FFFA82;
+    border-radius: 5px;
+    width: 30px;
+    height: 30px;
+}
+
+.statusImg4 {
+    background-color: #C0C0C0;
     border-radius: 5px;
     width: 30px;
     height: 30px;
 }
 
 /* 혼잡도 정보 */
-.statusImg2 {
-    background-color: red;
+.statusImg5 {
+    background-color: #90ee90;
+    border-radius: 100%;
+    width: 30px;
+    height: 30px
+}
+
+.statusImg6 {
+    background-color: #FF9A5F;
+    border-radius: 100%;
+    width: 30px;
+    height: 30px
+}
+
+.statusImg7 {
+    background-color: #FF6E6E;
+    border-radius: 100%;
+    width: 30px;
+    height: 30px
+}
+
+.statusImg8 {
+    background-color: white;
     border-radius: 100%;
     width: 30px;
     height: 30px
@@ -50,4 +92,5 @@
 .statusText {
     font-size: 17px;
     font-weight: bolder;
+    color: #5f5f5f;
 }
