--- a/FE/frontend/src/pages/AdminToilet/ToiletStatistics.module.css
+++ b/FE/frontend/src/pages/AdminToilet/ToiletStatistics.module.css
@@ -44,6 +44,10 @@
     flex-direction: column;
     justify-content: center;
 
+    box-sizing: border-box;
+    padding-bottom: 40px;
+
+
     width: 50%;
     height: 100%;
 }
@@ -52,24 +56,39 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap: 30px;
+    width: 95%;
+    margin-bottom: 15px;
 }
 
 .sizeOption {
-    width: 50%;
+    width: 20%;
     height: 50px;
-
-    border: 3px solid chocolate;
+    border: 4px solid #B35310;
     border-radius: 25px;
 }
 
-.sizeOptionSubmit,
+.sizeOptionSubmit {
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    font-weight: 600;
+    background-color: #B35310;
+    color: white;
+    cursor: pointer;
+}
+
 .sizeOptionSelect {
     width: 100%;
     height: 100%;
     border: none;
     outline: none;
     border-radius: 25px;
+    font-weight: 600;
+
+    background-color: #f1ebe3;
 }
 
 .sizeOptionSubmit {
@@ -78,10 +97,41 @@
     justify-content: space-around;
 }
 
+/* 통계 테이블 */
 .table {
-    box-sizing: border-box;
-    padding: 20px;
-    border: 3px solid chocolate;
+    display: flex;
+    flex-direction: column;
+    background-color: #f1ebe3;
+    border: 4px solid #B35310;
     border-radius: 25px;
-    margin-top: 30px;
+    width: 95%;
+    box-sizing: border-box;
+    padding: 0px 15px;
+    padding-bottom: 10px;
+}
+
+.rowBox {
+    border-bottom: 2px solid #ccc;
+}
+
+.headRow {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0px 20px;
+
+    color: #a64f10;
+    font-weight: 900;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0px;
+    font-weight: 600;
+    font-size: 15px;
+}
+
+.cell {
+    flex: 1;
+    text-align: center;
 }
