--- a/FE/frontend/src/App.css
+++ b/FE/frontend/src/App.css
@@ -7,5 +7,5 @@
     border:solid 5px #B35310;
     background-color: #f4e6d4;
     font-family: 'Varela Round', sans-serif;
-    margin: 5% auto ;
+    margin: auto ;
 }
