--- a/FE/frontend/src/pages/Admin/AdminSignupPage.module.css
+++ b/FE/frontend/src/pages/Admin/AdminSignupPage.module.css
@@ -16,12 +16,10 @@
     height: 100%;
 }
 
-
-.container h2 {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 10px;
-    color: #B04A00;
+.logo {
+    box-sizing: border-box;
+    padding-left: 10px;
+    height: 100px;
 }
 
 .container form {
@@ -29,7 +27,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 0px 20px;
     border-radius: 10px;
 }
 
@@ -49,6 +47,7 @@
 
 .button {
     width: 100%;
+    margin: 8px 0px;
 }
 
 .button button {
