--- a/FE/frontend/src/pages/AdminToilet/ToiletMailBox.module.css
+++ b/FE/frontend/src/pages/AdminToilet/ToiletMailBox.module.css
@@ -48,7 +48,7 @@
   align-items: center;
 
   box-sizing: border-box;
-  padding: 0% 5% 5%;
+  padding: 0% 4% 0%;
   width: 50%;
   height: 100%;
 }
@@ -59,19 +59,32 @@
   display: flex;
   flex-direction: column;
 
-  border: 2px solid black;
+  background-color: #f1ebe3;
+  border: 4px solid #B35310;
   border-radius: 25px;
-  width: 75%;
+  width: 100%;
+  padding: 25px 20px;
 }
 
 .rowBox {
   border-bottom: 2px solid #ccc;
 }
 
+.headRow {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 10px 10px;
+
+  color: #a64f10;
+  font-weight: 600;
+}
+
 .row {
   display: flex;
   justify-content: space-between;
-  padding: 5px;
+  padding: 10px;
+  font-weight: 600;
+  font-size: 15px;
 }
 
 .cell {
@@ -82,4 +95,39 @@
 .cellContent {
   flex: 3;
   text-align: center;
+}
+
+/* 페이지네이션 */
+
+.pagination {
+  margin-top: 15px;
+  color: white;
+}
+
+/* 상세위치 */
+.state_content {
+  display: flex;
+  justify-content: start;
+  justify-items: center;
+  align-items: center;
+
+  width: 60%;
+  height: 40px;
+  padding-left: 25px;
+}
+
+/* 상세위치 이미지 */
+.contentImg {
+  width: 18px;
+  height: 18px;
+  margin-left: 20px;
+  margin-right: 15px;
+}
+
+/* 상세위치 텍스트 */
+.contentText {
+  font-size: 13px;
+  font-weight: bolder;
+  color: #646363;
+  cursor: pointer;
 }
