--- a/FE/frontend/src/pages/User/LoginPage.module.css
+++ b/FE/frontend/src/pages/User/LoginPage.module.css
@@ -9,7 +9,9 @@
 }
 
 .logo {
-    height: 125px;
+    box-sizing: border-box;
+    padding-left: 10px;
+    height: 100px;
 }
 
 .container form {
@@ -17,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 0px 20px;
     border-radius: 10px;
 }
 
@@ -36,6 +38,7 @@
 
 .button {
     width: 100%;
+    margin: 8px 0px;
 }
 
 .button button {
