--- a/FE/frontend/src/pages/User/SignupPage.module.css
+++ b/FE/frontend/src/pages/User/SignupPage.module.css
@@ -16,9 +16,10 @@
     height: 100%;
 }
 
-
 .logo {
-    height: 125px;
+    box-sizing: border-box;
+    padding-left: 10px;
+    height: 100px;
 }
 
 .container form {
@@ -26,7 +27,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 0px 20px;
     border-radius: 10px;
 }
 
@@ -46,6 +47,7 @@
 
 .button {
     width: 100%;
+    margin: 8px 0px;
 }
 
 .button button {
